# video-randomizer

./: .gitignore  AGENTS.md  README.md  build.sh  index.html  launch.sh  package-lock.json  package.json  plan.md
scripts/: download-ffmpeg.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  metadata.rs  models.rs  renderer.rs
src/components/: AmbientImport.tsx  AutouploadOptimizerTool.tsx  CutRandomSettings.tsx  DurationSettings.tsx  EncodingSettings.tsx  IntroImport.tsx  LiveOptimizerTool.tsx  MergerTool.tsx  MusicImport.tsx  OutputSettings.tsx  PlaybackStrategy.tsx  QueuePanel.tsx  RemasterTool.tsx  RenderProgress.tsx  SequenceDisplay.tsx  TransitionSettings.tsx  TrimmerTool.tsx  VideoImport.tsx  WatermarkSettings.tsx  WizardModal.tsx
